--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -141,7 +141,7 @@
                 <string>Mined balance in watch-only addresses that has not yet matured</string>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -247,7 +247,7 @@
                 <string>Your current total balance</string>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -269,7 +269,7 @@
                 <string>Unconfirmed transactions to watch-only addresses</string>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -347,7 +347,7 @@
                 <string>Total of transactions that have yet to be confirmed, and do not yet count toward the spendable balance</string>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -381,7 +381,7 @@
                 <string notr="true"/>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -443,7 +443,7 @@
                 <string notr="true"/>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -465,7 +465,7 @@
                 <string>Current total balance in watch-only addresses</string>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -493,7 +493,7 @@
                 <string>Mined balance that has not yet matured</string>
                </property>
                <property name="text">
-                <string notr="true">0.000 000 00 BTC</string>
+                <string notr="true">0.000 000 00 ZOC</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
